grafy a tabulky do 1. a 2. článku

--- a/061 ČRo dostažení.ipynb
+++ b/061 ČRo dostažení.ipynb
@@ -2,11 +2,255 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9f703388",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "folder = \"cro\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b585315b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "if not os.path.exists(folder):\n",
+    "    os.mkdir(folder)\n",
+    "else:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ae8a3193",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "198aa17f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import date, timedelta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9fca0570",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_dt = date(2023, 10, 22)\n",
+    "end_dt = date(2023, 11, 9)\n",
+    "delta = timedelta(days=1)\n",
+    "dates = []\n",
+    "while start_dt <= end_dt:\n",
+    "    dates.append(str(start_dt.isoformat()))\n",
+    "    start_dt += delta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e2167982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stanice = ['radiozurnal','radiowave','dvojka','vltava','plus','d-dur','jazz','pohoda']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "93e23454",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/22/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/23/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/24/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/25/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/26/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/27/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/28/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/29/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/30/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/31/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/01/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/02/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/03/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/04/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/05/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/06/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/07/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/08/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/09/radiozurnal.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/22/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/23/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/24/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/25/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/26/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/27/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/28/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/29/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/30/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/31/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/01/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/02/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/03/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/04/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/05/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/06/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/07/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/08/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/09/radiowave.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/22/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/23/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/24/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/25/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/26/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/27/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/28/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/29/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/30/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/31/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/01/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/02/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/03/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/04/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/05/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/06/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/07/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/08/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/09/dvojka.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/22/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/23/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/24/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/25/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/26/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/27/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/28/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/29/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/30/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/31/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/01/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/02/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/03/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/04/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/05/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/06/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/07/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/08/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/09/vltava.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/22/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/23/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/24/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/25/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/26/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/27/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/28/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/29/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/30/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/31/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/01/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/02/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/03/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/04/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/05/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/06/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/07/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/08/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/09/plus.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/22/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/23/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/24/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/25/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/26/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/27/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/28/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/29/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/30/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/31/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/01/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/02/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/03/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/04/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/05/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/06/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/07/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/08/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/09/d-dur.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/22/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/23/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/24/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/25/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/26/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/27/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/28/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/29/jazz.json\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/30/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/31/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/01/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/02/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/03/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/04/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/05/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/06/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/07/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/08/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/09/jazz.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/22/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/23/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/24/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/25/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/26/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/27/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/28/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/29/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/30/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/10/31/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/01/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/02/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/03/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/04/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/05/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/06/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/07/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/08/pohoda.json\n",
+      "https://api.rozhlas.cz/data/v2/playlist/day/2023/11/09/pohoda.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s in stanice:\n",
+    "    for d in dates:\n",
+    "        url = f\"\"\"https://api.rozhlas.cz/data/v2/playlist/day/{d.replace(\"-\", \"/\")}/{s}.json\"\"\"\n",
+    "        r = requests.get(url)\n",
+    "        with open(os.path.join(folder, f\"{s}-{d}.json\"), 'w+', encoding='utf-8') as f:\n",
+    "            print(url)\n",
+    "            f.write(r.text)"
+   ]
   }
  ],
  "metadata": {
