--- a/062 ČRo spojení a čištění.ipynb
+++ b/062 ČRo spojení a čištění.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
    "id": "a62db7b0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 2,
    "id": "eb15e931",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 3,
    "id": "be7390d2",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "id": "e7cb103d",
    "metadata": {},
    "outputs": [
@@ -338,6 +338,44 @@
       "pohoda-2021-09-13.json\n",
       "pohoda-2021-09-14.json\n",
       "radiowave-2021-02-24.json\n",
+      "radiozurnal-2020-10-22.json\n",
+      "radiozurnal-2020-10-23.json\n",
+      "radiozurnal-2020-10-24.json\n",
+      "radiozurnal-2020-10-25.json\n",
+      "radiozurnal-2020-10-26.json\n",
+      "radiozurnal-2020-10-27.json\n",
+      "radiozurnal-2020-10-28.json\n",
+      "radiozurnal-2020-10-29.json\n",
+      "radiozurnal-2020-10-30.json\n",
+      "radiozurnal-2020-10-31.json\n",
+      "radiozurnal-2020-11-01.json\n",
+      "radiozurnal-2020-11-02.json\n",
+      "radiozurnal-2020-11-03.json\n",
+      "radiozurnal-2020-11-04.json\n",
+      "radiozurnal-2020-11-05.json\n",
+      "radiozurnal-2020-11-06.json\n",
+      "radiozurnal-2020-11-07.json\n",
+      "radiozurnal-2020-11-08.json\n",
+      "radiozurnal-2020-11-09.json\n",
+      "radiozurnal-2020-11-10.json\n",
+      "radiozurnal-2020-11-11.json\n",
+      "radiozurnal-2020-11-12.json\n",
+      "radiozurnal-2020-11-13.json\n",
+      "radiozurnal-2020-11-14.json\n",
+      "radiozurnal-2020-11-15.json\n",
+      "radiozurnal-2020-11-16.json\n",
+      "radiozurnal-2020-11-17.json\n",
+      "radiozurnal-2020-11-18.json\n",
+      "radiozurnal-2020-11-19.json\n",
+      "radiozurnal-2020-11-20.json\n",
+      "radiozurnal-2020-11-21.json\n",
+      "radiozurnal-2020-11-22.json\n",
+      "radiozurnal-2020-11-23.json\n",
+      "radiozurnal-2020-11-24.json\n",
+      "radiozurnal-2020-11-25.json\n",
+      "radiozurnal-2020-11-26.json\n",
+      "radiozurnal-2020-11-27.json\n",
+      "radiozurnal-2020-11-28.json\n",
       "radiozurnal-2021-02-22.json\n",
       "radiozurnal-2021-02-24.json\n",
       "vltava-2021-02-24.json\n"
@@ -361,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "id": "82394973",
    "metadata": {},
    "outputs": [],
@@ -371,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 6,
    "id": "8cbef963",
    "metadata": {},
    "outputs": [],
@@ -381,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 7,
    "id": "7d51f3ab",
    "metadata": {},
    "outputs": [
@@ -477,58 +515,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1067022</th>\n",
-       "      <td>2023-10-21T11:56:56+02:00</td>\n",
-       "      <td>19374164.0</td>\n",
-       "      <td>Vojta Nýdl</td>\n",
-       "      <td>26969.0</td>\n",
-       "      <td>Jantarový stín</td>\n",
-       "      <td>91446.0</td>\n",
+       "      <th>1087909</th>\n",
+       "      <td>2023-11-09T15:57:39+01:00</td>\n",
+       "      <td>19466671.0</td>\n",
+       "      <td>Kneebody</td>\n",
+       "      <td>279.0</td>\n",
+       "      <td>Mikie Lee (Kaveh Rastegar)</td>\n",
+       "      <td>98039.0</td>\n",
        "      <td>vltava</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1067023</th>\n",
-       "      <td>2023-10-21T16:22:37+02:00</td>\n",
-       "      <td>19375252.0</td>\n",
-       "      <td>Ludmila Dvořáková &amp; Orchestr Národního divadla...</td>\n",
-       "      <td>32892.0</td>\n",
-       "      <td>Ewig war ich, árie Brünnhilde z 3. dějství ope...</td>\n",
-       "      <td>109748.0</td>\n",
+       "      <th>1087910</th>\n",
+       "      <td>2023-11-09T16:03:17+01:00</td>\n",
+       "      <td>19466681.0</td>\n",
+       "      <td>Avishai Cohen</td>\n",
+       "      <td>903.0</td>\n",
+       "      <td>Ha'Ahava</td>\n",
+       "      <td>95077.0</td>\n",
        "      <td>vltava</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1067024</th>\n",
-       "      <td>2023-10-22T13:53:15+02:00</td>\n",
-       "      <td>19379027.0</td>\n",
-       "      <td>VÁCLAV NECKÁŘ</td>\n",
-       "      <td>3489.0</td>\n",
-       "      <td>TU KYTARU JSEM KOUPIL KVŮLI TOBĚ (ADMIN)</td>\n",
-       "      <td>111512.0</td>\n",
+       "      <th>1087911</th>\n",
+       "      <td>2023-11-09T16:15:34+01:00</td>\n",
+       "      <td>19466702.0</td>\n",
+       "      <td>Dva</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>Francé Trancé (Barbora Kratochvílová)</td>\n",
+       "      <td>88582.0</td>\n",
        "      <td>vltava</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1067025</th>\n",
-       "      <td>2023-10-22T13:57:04+02:00</td>\n",
-       "      <td>19379038.0</td>\n",
-       "      <td>GOLDEN KIDS</td>\n",
-       "      <td>4643.0</td>\n",
-       "      <td>ČASY SE MĚNÍ</td>\n",
-       "      <td>11975.0</td>\n",
+       "      <th>1087912</th>\n",
+       "      <td>2023-11-09T16:21:11+01:00</td>\n",
+       "      <td>19466711.0</td>\n",
+       "      <td>JFDR</td>\n",
+       "      <td>24998.0</td>\n",
+       "      <td>Anew (Jófrí?ur Ákadóttir)</td>\n",
+       "      <td>85786.0</td>\n",
        "      <td>vltava</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1067026</th>\n",
-       "      <td>2023-10-22T23:26:45+02:00</td>\n",
-       "      <td>19380495.0</td>\n",
-       "      <td>Danilo Pérez</td>\n",
-       "      <td>922.0</td>\n",
-       "      <td>Overjoyed (Stevie Wonder/ arr. Danilo Pérez)</td>\n",
-       "      <td>111538.0</td>\n",
+       "      <th>1087913</th>\n",
+       "      <td>2023-11-09T16:23:56+01:00</td>\n",
+       "      <td>19466718.0</td>\n",
+       "      <td>Melissa Aldana</td>\n",
+       "      <td>26049.0</td>\n",
+       "      <td>Falling (Melissa Aldana &amp; Lage Lund)</td>\n",
+       "      <td>100212.0</td>\n",
        "      <td>vltava</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1067027 rows × 7 columns</p>\n",
+       "<p>1087914 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -539,11 +577,11 @@
        "3        2020-12-10T18:05:36+01:00  10279719.0   \n",
        "4        2020-12-11T06:04:38+01:00  10281201.0   \n",
        "...                            ...         ...   \n",
-       "1067022  2023-10-21T11:56:56+02:00  19374164.0   \n",
-       "1067023  2023-10-21T16:22:37+02:00  19375252.0   \n",
-       "1067024  2023-10-22T13:53:15+02:00  19379027.0   \n",
-       "1067025  2023-10-22T13:57:04+02:00  19379038.0   \n",
-       "1067026  2023-10-22T23:26:45+02:00  19380495.0   \n",
+       "1087909  2023-11-09T15:57:39+01:00  19466671.0   \n",
+       "1087910  2023-11-09T16:03:17+01:00  19466681.0   \n",
+       "1087911  2023-11-09T16:15:34+01:00  19466702.0   \n",
+       "1087912  2023-11-09T16:21:11+01:00  19466711.0   \n",
+       "1087913  2023-11-09T16:23:56+01:00  19466718.0   \n",
        "\n",
        "                                                 interpret  interpret_id  \\\n",
        "0        Samuel Ramey & London Philharmonic Orchestra, ...       24978.0   \n",
@@ -552,11 +590,11 @@
        "3        Adam Plachetka & Symfonický Orchestr Českého R...       24977.0   \n",
        "4        Adam Plachetka & Symfonický Orchestr Českého R...       24977.0   \n",
        "...                                                    ...           ...   \n",
-       "1067022                                         Vojta Nýdl       26969.0   \n",
-       "1067023  Ludmila Dvořáková & Orchestr Národního divadla...       32892.0   \n",
-       "1067024                                      VÁCLAV NECKÁŘ        3489.0   \n",
-       "1067025                                        GOLDEN KIDS        4643.0   \n",
-       "1067026                                       Danilo Pérez         922.0   \n",
+       "1087909                                           Kneebody         279.0   \n",
+       "1087910                                      Avishai Cohen         903.0   \n",
+       "1087911                                                Dva         118.0   \n",
+       "1087912                                               JFDR       24998.0   \n",
+       "1087913                                     Melissa Aldana       26049.0   \n",
        "\n",
        "                                                     track  track_id stanice  \n",
        "0           Non piu andrai, árie z 1. dějství opery Figaro   83837.0       d  \n",
@@ -565,16 +603,16 @@
        "3        La calunnia e un venticello, árie z 1. dějství...   83835.0       d  \n",
        "4        La calunnia e un venticello, árie z 1. dějství...   83835.0       d  \n",
        "...                                                    ...       ...     ...  \n",
-       "1067022                                     Jantarový stín   91446.0  vltava  \n",
-       "1067023  Ewig war ich, árie Brünnhilde z 3. dějství ope...  109748.0  vltava  \n",
-       "1067024           TU KYTARU JSEM KOUPIL KVŮLI TOBĚ (ADMIN)  111512.0  vltava  \n",
-       "1067025                                       ČASY SE MĚNÍ   11975.0  vltava  \n",
-       "1067026       Overjoyed (Stevie Wonder/ arr. Danilo Pérez)  111538.0  vltava  \n",
+       "1087909                         Mikie Lee (Kaveh Rastegar)   98039.0  vltava  \n",
+       "1087910                                           Ha'Ahava   95077.0  vltava  \n",
+       "1087911              Francé Trancé (Barbora Kratochvílová)   88582.0  vltava  \n",
+       "1087912                          Anew (Jófrí?ur Ákadóttir)   85786.0  vltava  \n",
+       "1087913               Falling (Melissa Aldana & Lage Lund)  100212.0  vltava  \n",
        "\n",
-       "[1067027 rows x 7 columns]"
+       "[1087914 rows x 7 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 8,
    "id": "3338189e",
    "metadata": {},
    "outputs": [],
