--- a/902 cesta písničky do éteru.ipynb
+++ b/902 cesta písničky do éteru.ipynb
@@ -634,7 +634,7 @@
     {
      "data": {
       "text/plain": [
-       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Držáci hitparády</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\"></th><th class=\"text-nowrap\">Track</th><th class=\"text-nowrap\">Týdnů v top 100</th></tr></thead><tbody class=\"text-sm\"><tr><td>1.</td><td>Karel Gott: Srdce nehasnou</td><td>179</td></tr><tr><td>2.</td><td>Mirai: Když nemůžeš, tak přidej</td><td>175</td></tr><tr><td>3.</td><td>Mandrage: Motýli</td><td>169</td></tr><tr><td>4.</td><td>Michal Hrůza: Pro Emu</td><td>164</td></tr><tr><td>5.</td><td>Mirai: Chci tančit</td><td>150</td></tr><tr><td>6.</td><td>Marek Ztracený: Naše cesty</td><td>149</td></tr><tr><td>7.</td><td>Mirai: OTCHI</td><td>140</td></tr><tr><td>8.</td><td>Slza: Na srdci</td><td>139</td></tr><tr><td>9.</td><td>Chinaski: Láska a data</td><td>137</td></tr><tr><td>10.</td><td>Marek Ztracený: Tak se nezlob</td><td>133</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=\"100%\">Písně, které se od roku 2006 držely nejvíce týdnů v top 100 českého rádiového žebříčku.</td></tr></tfoot></table>'"
+       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Držáci hitparády</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\"></th><th class=\"text-nowrap\">Track</th><th class=\"text-nowrap\">Týdnů v top 100</th></tr></thead><tbody class=\"text-sm\"><tr><td>1.</td><td>Karel Gott: Srdce nehasnou</td><td>179</td></tr><tr><td>2.</td><td>Mirai: Když nemůžeš, tak přidej</td><td>175</td></tr><tr><td>3.</td><td>Mandrage: Motýli</td><td>169</td></tr><tr><td>4.</td><td>Michal Hrůza: Pro Emu</td><td>164</td></tr><tr><td>5.</td><td>Mirai: Chci tančit</td><td>150</td></tr><tr><td>6.</td><td>Marek Ztracený: Naše cesty</td><td>149</td></tr><tr><td>7.</td><td>Mirai: OTCHI</td><td>140</td></tr><tr><td>8.</td><td>Slza: Na srdci</td><td>139</td></tr><tr><td>9.</td><td>Chinaski: Láska a data</td><td>137</td></tr><tr><td>10.</td><td>Marek Ztracený: Tak se nezlob</td><td>133</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=2>Písně, které se od roku 2006 držely nejvíce týdnů v top 100 českého rádiového žebříčku.</td></tr></tfoot></table>'"
       ]
      },
      "execution_count": 21,
@@ -1195,6 +1195,369 @@
    ],
    "source": [
     "graf(carovy=[h1, h2, h3], target=\"typicka_trajektorie\", titulek='Typická cesta písně hitparádou', podtitulek=f'''Graf zobrazuje střední pozici vybrané kategorie podle týdnu od prvního proniknutí mezi 100 nejhranějších písní v českých rádiích.''', kredity=[\"Zdroj dat: ifpicr.cz | Vizualizace: Michal Kašpárek, iROZHLAS.cz\",\"https://www.irozhlas.cz/zpravy-tag/datova-zurnalistika\"], prvni=True, osay=' ', osay2=' ', skladany=False, naopak=False, vzhurunohama=True, osaymin=1, osaymax=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c10b5b8",
+   "metadata": {},
+   "source": [
+    "## Vydavatelství"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6cd5470a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           Warner Music\n",
+       "1           Warner Music\n",
+       "2           Warner Music\n",
+       "3           Warner Music\n",
+       "4           Warner Music\n",
+       "              ...       \n",
+       "90995    Universal Music\n",
+       "90996         Sony Music\n",
+       "90997    Universal Music\n",
+       "90998         Sony Music\n",
+       "90999    Universal Music\n",
+       "Name: vydavatel, Length: 91000, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['vydavatel']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6978bbe9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Warner Music',\n",
+       " 'Universal Music',\n",
+       " 'Sony Music',\n",
+       " 'Agentura Goja',\n",
+       " 'Um/Mp',\n",
+       " 'Pm',\n",
+       " 'Wave Rec.',\n",
+       " 'Popron Traxx',\n",
+       " 'Hfr',\n",
+       " 'Rgme',\n",
+       " 'Ir',\n",
+       " 'Tiger',\n",
+       " 'Supraphon',\n",
+       " 'Tah',\n",
+       " 'Orpheus Production',\n",
+       " 'E2',\n",
+       " 'Fajnr.',\n",
+       " 'Tr',\n",
+       " 'Curepink',\n",
+       " 'Prospero In',\n",
+       " 'Lp',\n",
+       " 'Next Era',\n",
+       " 'Nettwerk',\n",
+       " 'Brjan Music',\n",
+       " 'Nan',\n",
+       " 'Starshit-Recordings',\n",
+       " 'Pony Canyon',\n",
+       " 'Wm/Forza',\n",
+       " 'Leftout',\n",
+       " 'Kontor Records',\n",
+       " 'Championship Music',\n",
+       " 'Colosseum Rec.',\n",
+       " 'Homerun Records',\n",
+       " 'Sl/Um',\n",
+       " 'Klubbstyle Rec.',\n",
+       " 'M&M Brothers',\n",
+       " 'Bpm Rec.',\n",
+       " 'Toka Beatz',\n",
+       " 'Wg',\n",
+       " 'Altantic',\n",
+       " 'Big Demoiselles',\n",
+       " 'Fm1/Promoprodukce',\n",
+       " 'Panther',\n",
+       " 'Onairmusic',\n",
+       " 'Vis-A-Vis Prod.',\n",
+       " 'Chm/Parlophone',\n",
+       " 'X Production',\n",
+       " \"H'Art\",\n",
+       " 'Patricie',\n",
+       " 'Fn',\n",
+       " 'Richmondrecords',\n",
+       " 'Rm Records',\n",
+       " 'Brainzone',\n",
+       " 'Cox',\n",
+       " 'Singlton/Universal Music',\n",
+       " 'Česká Muzika',\n",
+       " 'Hm/Emi',\n",
+       " 'Am',\n",
+       " 'Pink Panther Desing/Warner Music',\n",
+       " 'Mafia Records',\n",
+       " 'Pop Off Production',\n",
+       " 'Richmondrecords/Emi',\n",
+       " 'Petarda Production',\n",
+       " 'Mc Production',\n",
+       " 'Ultrarecords',\n",
+       " 'Bohemian Recordings',\n",
+       " 'Brainzone/Tommü Records',\n",
+       " 'Art One/Um',\n",
+       " 'Um/Richrec',\n",
+       " 'Um/Hitfactory Rec.',\n",
+       " 'Revealed',\n",
+       " 'Distribuce Závodský',\n",
+       " 'Lewron Music Center',\n",
+       " 'Cmh',\n",
+       " 'Studio Fontána',\n",
+       " 'Promoteam',\n",
+       " 'Hurikán Records',\n",
+       " 'Raego Tv',\n",
+       " 'Olga Lounová Records',\n",
+       " 'Magic Records',\n",
+       " 'B&M Music',\n",
+       " 'R48 Agency S.R.O.',\n",
+       " 'Wait For Waves',\n",
+       " 'Clockwise',\n",
+       " 'Biograf Jan Svěrák',\n",
+       " 'Cross Audio Production',\n",
+       " 'Dade Music/Supraphon',\n",
+       " 'Kudykam',\n",
+       " 'Art Shock/Supraphon',\n",
+       " 'I.Richmond.P./Universal Music',\n",
+       " 'Bookin Agency',\n",
+       " 'Pink Panther',\n",
+       " 'Popron Music',\n",
+       " 'Ty Nikdy / Universal Music',\n",
+       " 'Tescoma Music',\n",
+       " 'Tomáš Klus',\n",
+       " 'Lch',\n",
+       " 'Maxi Records',\n",
+       " 'Harix S.R.O.',\n",
+       " 'Lotus Line',\n",
+       " 'Tranzistor',\n",
+       " 'Samonáklad',\n",
+       " 'Xl Recordings',\n",
+       " 'We On The Moon',\n",
+       " 'Mistamusic',\n",
+       " 'Foret Records',\n",
+       " 'Hr',\n",
+       " 'Marlene Film Production',\n",
+       " 'Studio Citron',\n",
+       " 'Ego',\n",
+       " 'Sukuba Agency',\n",
+       " 'Lake Malawi',\n",
+       " 'Eleven Seven',\n",
+       " 'Paf Music',\n",
+       " 'Ewolution/Warner Music',\n",
+       " 'Goja',\n",
+       " 'Blakkwood/Universal Music',\n",
+       " 'Mikael Music',\n",
+       " 'Armada',\n",
+       " 'Buckingham Entertainment Group',\n",
+       " 'Sagl Production',\n",
+       " 'The Silver Spoons',\n",
+       " 'Edel',\n",
+       " 'Ty Nikdy/Warner Music',\n",
+       " 'Lauv',\n",
+       " 'Bigg Boss',\n",
+       " 'Universal Music/Warner Music',\n",
+       " 'Kali Records',\n",
+       " 'Vivienne Records',\n",
+       " 'Niko',\n",
+       " 'Bmg/Dream Music',\n",
+       " 'Surikata Rec.',\n",
+       " 'Nn Music',\n",
+       " 'Peter Fider',\n",
+       " 'Hm Productions',\n",
+       " 'Wisemusic',\n",
+       " 'Cap-Sounds',\n",
+       " 'Mida',\n",
+       " 'Mu-Zi-Ka!',\n",
+       " 'Petarda/Brainzone',\n",
+       " 'Mike Roft Records/Warner Music',\n",
+       " '100Promotion',\n",
+       " 'Alma Matters',\n",
+       " 'Daniell',\n",
+       " 'Pias',\n",
+       " 'Fck Them/Universal Music',\n",
+       " 'Easy Life Records',\n",
+       " 'Domi',\n",
+       " 'Marek Ztracený/Supraphon',\n",
+       " 'Autentik Music/Universal Music',\n",
+       " 'Timbre Music',\n",
+       " 'Ewolution',\n",
+       " 'Irascible Music',\n",
+       " 'Ingrooves',\n",
+       " 'Tomáš Klus / Supraphon',\n",
+       " 'Super Projects',\n",
+       " 'Adam Janota',\n",
+       " 'Global Records',\n",
+       " 'Ruka Hore',\n",
+       " 'Holidays Forever',\n",
+       " 'Fate Magazine',\n",
+       " 'Dimitrije Maksimovic',\n",
+       " 'Bmg Rights Management',\n",
+       " 'Mark Dann',\n",
+       " 'Championship M./Universal M.',\n",
+       " 'Better Noise Music',\n",
+       " 'Viktor Sheen/Mikeroft/Warner M.',\n",
+       " 'Promuziku']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['vydavatel'].drop_duplicates().to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "fb383469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vydavatelstvo = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "d27d4b9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vydavatelstvo['vydavatel'] = vydavatelstvo['vydavatel'].apply(lambda x: x.split(\"/\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a6b7bb08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vydavatelstvo = vydavatelstvo.explode('vydavatel')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6701066c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vydavatelstvo['vydavatel'] = vydavatelstvo['vydavatel'].apply(lambda x: x.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "83a4d763",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vydavatelstvo['vydavatel'] = vydavatelstvo['vydavatel'].replace('Nan',None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "231905e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "vydavatel\n",
+       "Universal Music       41204\n",
+       "Warner Music          21187\n",
+       "Sony Music            17874\n",
+       "Supraphon              2410\n",
+       "Brainzone              2399\n",
+       "Singlton                981\n",
+       "I.Richmond.P.           871\n",
+       "Championship Music      290\n",
+       "Marek Ztracený          278\n",
+       "Rgme                    206\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vydavatelstvo.groupby('vydavatel').size().nlargest(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ed4a18be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_vydavatele = vydavatelstvo.groupby('vydavatel').size().nlargest().index.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9b6f4c39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vydavatelstvo_graf = []\n",
+    "for v in top_vydavatele:\n",
+    "    serie = pd.Series(vydavatelstvo[vydavatelstvo['vydavatel'] == v].groupby('rok').size() / vydavatelstvo.groupby('rok').size(), name=v)\n",
+    "    vydavatelstvo_graf.append(serie)\n",
+    "serie_ostatni = pd.Series(vydavatelstvo[~vydavatelstvo['vydavatel'].isin(top_vydavatele)].groupby('rok').size()  / vydavatelstvo.groupby('rok').size(), name='ostatní')\n",
+    "vydavatelstvo_graf.append(serie_ostatni)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "1e38ab21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graf uložen.\n"
+     ]
+    }
+   ],
+   "source": [
+    "graf(carovy=vydavatelstvo_graf, target='vydavatelstvo', titulek='Podíl vydavatelů na obsazených hitparádových příčkách', procenta=vydavatelstvo_graf, kredity=[\"Zdroj dat: ifpicr.cz | Vizualizace: Michal Kašpárek, iROZHLAS.cz\",\"https://www.irozhlas.cz/zpravy-tag/datova-zurnalistika\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82b848c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graf(carovy=pozoruhodne_g, target=\"pozoruhodne_pisne\", titulek='Hitparádové trajektorie vybraných písní', podtitulek=f'''Srovnání dvou nejrychlejších hitparádových jedniček (Forget Me, Katchi), tří nejpomalejších jedniček (Vánoce na míru, For You, Échame la culpa) a tří písní, které se v top 100 držely nejdéle (Srdce nehasnou, Když nemůžeš, tak přidej, Motýli).''', kredity=[\"Zdroj dat: ifpicr.cz | Vizualizace: Michal Kašpárek, iROZHLAS.cz\",\"https://www.irozhlas.cz/zpravy-tag/datova-zurnalistika\"], prvni=True, osay=' ', osay2=' ', skladany=False, naopak=False, vzhurunohama=True, osaymin=1, osaymax=100)"
    ]
   }
  ],
